<resources>
    <string name="app_name">Crave</string>
    <string name="splash_title">Crave</string>
    <string name="splash_register">Register</string>
    <string name="splash_login">Login</string>
    <string name="login_email">Enter Email Here</string>
    <string name="login_password">Enter Password Here</string>
    <string name="login_login">Login</string>
    <string name="search_hint">Search</string>
    <string name="search_btnSearch">Search</string>
    <string name="register_emailHint">Enter Email Here</string>
    <string name="register_password1Hint">Enter Password Here</string>
    <string name="register_password2Hint">Confirm Password</string>
    <string name="register_btnRegister">Register</string>
    <string name="profile_password1Hint">Enter New Password</string>
    <string name="profile_password2Hint">Confirm New Password</string>
    <string name="profile_btnChangePassword">Change Password</string>
    <string name="profile_btnSaveChanges">Save Changes</string>
    <string name="profile_btnLogOut">Log Out</string>
    <string name="itemview_description">Description:</string>
    <string name="itemview_dietaryInfo">Dietary Information:</string>
    <string name="favorites_cravings">Previous Ratings</string>
    <string name="bb_featured">Featured</string>
    <string name="bb_near_me">Near Me</string>
    <string name="bb_search">Search</string>
    <string name="bb_cravings">Cravings</string>
    <string name="bb_profile">Profile</string>
    <string name="searchview_mealSearch">Meal Search</string>
    <string name="searchview_restaurantSearch">Restaurant Search</string>
    <string name="item_search">Item Search</string>
    <string name="restaurant_search">Restaurant Search</string>
    <string name="bb_more">More</string>
    <string name="dev_email">Contact Us: mikeremondi@gmail.com</string>
    <string name="dev_name">Michael Remondi 2016</string>
    <string name="more_title">More</string>
    <string name="more_my_profile">My Profile</string>
    <string name="more_contact_us">Contact Us</string>
    <string name="more_about_us">About Us</string>

    <string-array name="filter_choices">
        <item>Price: Low -> High</item>
        <item>Price: High -> Low</item>
        <item>Nearby</item>
        <item>Rating</item>
    </string-array>
</resources>