<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.cravings.RegisterActivity">

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:hint="@string/register_emailHint"/>

    <EditText
        android:id="@+id/etRegisterPassword1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterEmail"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:hint="@string/register_password1Hint"/>

    <EditText
        android:id="@+id/etRegisterPassword2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterPassword1"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:hint="@string/register_password2Hint"/>


    <Button
        android:id="@+id/btnRegisterRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etRegisterPassword2"
        style="@style/LoginButtonStyle"
        android:text="@string/register_btnRegister"/>

</RelativeLayout>
