<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAboutAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AboutTitleTheme"
        android:layout_centerInParent="true"
        android:text="@string/splash_title"/>

    <TextView
        android:id="@+id/tvAboutAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_name"
        style="@style/NormalTextThemeBold"
        android:layout_below="@+id/tvAboutAppName"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tvContactUsEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAboutAuthorName"
        android:layout_centerInParent="true"
        android:text="@string/dev_email"
        android:linksClickable="true"
        android:clickable="true"
        android:textColorLink="@color/colorPrimary"
        style="@style/NormalTextThemeBold"
        android:autoLink="email" />

</RelativeLayout>