<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleTheme"
        android:text="@string/more_title"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_my_profile"
        style="@style/NormalTextTheme"
        android:drawableRight="@drawable/ic_person_outline_primary_24dp"
        android:drawableEnd="@drawable/ic_person_outline_primary_24dp"/>

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_about_us"
        style="@style/NormalTextTheme"
        android:drawableRight="@drawable/ic_info_outline_black_24dp"
        android:drawableEnd="@drawable/ic_info_outline_black_24dp"/>

</LinearLayout>